--- a/_posts/2021-06-24-efficient-simulations-in-r.Rmd
+++ b/_posts/2021-06-24-efficient-simulations-in-r.Rmd
@@ -233,7 +233,7 @@ legend("topright", col = c(scales::alpha(c('skyblue', 'red'), .5)), lwd = 10,
        legend = c("Level", "Demeaned"))
 ```
 
-Here we have replicated the key result in BS13, Table 3. Moral of the story: If you have an interaction effect in a panel setting (e.g. DiD!), it's always worth demeaning your terms and double check-checking that your results don't change.
+Here we have replicated the key result in BS13, Table 3. **Moral of the story:** If you have an interaction effect in a panel setting (e.g. DiD!), it's always worth demeaning your terms and double-checking that your results don't change.
 
 ## References
 
